# hostsed

./: LICENSE  README.md  hostsed  pyproject.toml  setup.py
hosts/: editor.py
hostsed/: __init__.py  editor.py
tests/: test_editor.py
