[project]
name = "hostsed"
version = "0.5.1"
authors = [
    {name = "lichun"}
]
description = "A hosts file editing tool for command line shell."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/socrateslee/hostsed"

[project.scripts]
hostsed = "hostsed.editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"